fix: scrollbar

--- a/src/components/cardContent/CardContent.css
+++ b/src/components/cardContent/CardContent.css
@@ -1,6 +1,5 @@
 .main-content {
     height: 100vh;
-    width: 100vw;
     background-color: rgb(19, 41, 61);
     display: flex;
     align-items: center;
