--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -5,10 +5,10 @@
 
 .footer-background {
     background-color: #000;
-    width: 100vw;
     position: absolute;
     left: 0;
     z-index: -1;
+    width: 100%;
 }
 
 .copyright {
